--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -38,7 +38,7 @@ body {
   -moz-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
 	font-family: "Roboto";
-	background-color: #ebebeb;
+	background-color: $grey;
 }
 input,
 button,
