--- a/src/components/organisms/CardList/styles.module.scss
+++ b/src/components/organisms/CardList/styles.module.scss
@@ -2,5 +2,16 @@
 	display: grid;
 	grid-template-columns: 1fr 1fr 1fr;
 	gap: 1.5rem;
-	max-width: 80.25rem;
+	max-width: 77rem;
+	padding: 0 1rem;
+	margin: 0 auto;
+	@media (max-width:1001px) {
+		max-width: 55rem;
+		grid-template-columns: 1fr 1fr;
+	}
+	@media (max-width:660px) {
+		max-width: 30rem;
+		grid-template-columns: 1fr;
+		gap: 1rem;
+	}
 }
