--- a/src/components/pages/CardPage/styles.module.scss
+++ b/src/components/pages/CardPage/styles.module.scss
@@ -1,8 +1,83 @@
-.content {
-	font-size: 3rem;
-	text-align: center;
-	.link {
-		color: green;
-		display: block;
-	}
+@import "../../../assets/styles/main.scss";
+.container {
+  max-width: 77rem;
+  margin: 0 auto;
+  padding: 0.5rem;
+  .link {
+    line-height: 1.5rem;
+    color: $darkGrey;
+    display: flex;
+    align-items: center;
+    margin: 0 0 3rem 0;
+    @media (max-width: 630px) {
+      margin: 0 0 1rem 0;
+    }
+    .icon {
+      margin: 0 0.5rem 0 0;
+    }
+  }
+  .content {
+    display: flex;
+    @media (max-width: 630px) {
+      display: block;
+    }
+    .image {
+      max-width: 25rem;
+      max-height: 25rem;
+      margin: 0 6rem 0 0;
+      @media (max-width: 820px) {
+        margin: 0 2rem 0 0;
+      }
+      @media (max-width: 630px) {
+        margin: 0 auto 1rem auto;
+      }
+      img {
+        width: 100%;
+        height: 100%;
+      }
+    }
+    .info {
+      display: flex;
+      flex-direction: column;
+      align-items: start;
+      @media (max-width: 630px) {
+        align-items: center;
+      }
+      span {
+        color: darkGrey;
+      }
+      .status {
+        font-size: 0.75rem;
+        line-height: 1rem;
+        letter-spacing: 0.06em;
+        color: $green;
+        padding: 0.5rem 0.75rem;
+        background: $greenBg;
+        margin: 0 0 0.75rem 0;
+      }
+      .name {
+        line-height: 1.5rem;
+        color: $darkGrey;
+      }
+      .date {
+        font-size: 0.75rem;
+        line-height: 1.5rem;
+      }
+      .nickname {
+        color: $darkGrey;
+        margin: 0 0 2rem 0;
+        @media (max-width: 630px) {
+          margin: 0 0 0.5rem 0;
+        }
+      }
+      .quote {
+        max-width: 26rem;
+        @media (max-width: 630px) {
+          margin: 0 auto;
+          text-align: center;
+          font-size: 0.9rem;
+        }
+      }
+    }
+  }
 }
