--- a/src/assets/styles/vars.scss
+++ b/src/assets/styles/vars.scss
@@ -1,5 +1,6 @@
-$white: #fff;
+$white: #ffffff;
 $green: #51e245;
 $greenBg: rgba(48, 255, 30, 0.2);
-$darkGrey:#2d2d2d;
-$grey:#ebebeb;
+$darkGrey: #2d2d2d;
+$grey: #fbfbfb;
+$yellow: #ffd930;
