--- a/src/components/molecules/Card/styles.module.scss
+++ b/src/components/molecules/Card/styles.module.scss
@@ -2,6 +2,7 @@
 .card {
 	background-color: $white;
 	border-radius: 0.25rem;
+	box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
   .content {
 		display: flex;
 		.image {
