--- a/src/components/molecules/Header/styles.module.scss
+++ b/src/components/molecules/Header/styles.module.scss
@@ -4,8 +4,8 @@
 	margin: 0 0 2rem 0;
   .content {
 		padding: 1rem;
-    max-width: 1100px;
-    height: 80px;
+    max-width: 68.75rem;
+    height: 5rem;
     margin: 0 auto;
     display: flex;
     align-items: center;
