--- a/src/components/pages/CardPage/styles.module.scss
+++ b/src/components/pages/CardPage/styles.module.scss
@@ -29,6 +29,8 @@
         margin: 0 2rem 0 0;
       }
       @media (max-width: 630px) {
+        max-width: 30rem;
+        height: 20rem;
         margin: 0 auto 1rem auto;
       }
       img {
