--- a/src/components/molecules/Header/styles.module.scss
+++ b/src/components/molecules/Header/styles.module.scss
@@ -1,31 +1,30 @@
 @import "../../../assets/styles/main.scss";
 .header {
   background-color: $white;
-	margin: 0 0 2rem 0;
+  margin: 0 0 2rem 0;
   .content {
-		padding: 1rem;
-    max-width: 68.75rem;
+    padding: 1rem;
     height: 5rem;
-    margin: 0 auto;
+    @include container;
     display: flex;
     align-items: center;
     justify-content: space-between;
   }
   .link {
-		display: flex;
-		align-items: center;
+    display: flex;
+    align-items: center;
     line-height: 1.5rem;
-		color: $darkGrey;
-		padding: 0.5rem 1rem;
-		border: 0.1rem solid $yellow;
-		border-radius: 0.25rem;
-		.burger {
-			width: 1rem;
-			height: 1rem;
-			margin: 0 0.8rem 0 0;
-		}
+    color: $darkGrey;
+    padding: 0.5rem 1rem;
+    border: 0.1rem solid $yellow;
+    border-radius: 0.25rem;
+    .burger {
+      width: 1rem;
+      height: 1rem;
+      margin: 0 0.8rem 0 0;
+    }
   }
-	.activeLink {
-		display: none;
-	}
+  .activeLink {
+    display: none;
+  }
 }
