--- a/src/components/pages/MainPage/styles.module.scss
+++ b/src/components/pages/MainPage/styles.module.scss
@@ -1,11 +1,3 @@
-.content {
-	text-align: center;
-	h1 {
-		font-size: 5rem;
-		margin: 0 0 0.5rem 0;
-	}
-	.link {
-		color: green;
-		font-size: 3rem;
-	}
+.main {
+  flex: 1 1 auto;
 }
