--- a/src/assets/styles/mixins.scss
+++ b/src/assets/styles/mixins.scss
@@ -2,3 +2,27 @@
   max-width: 78rem;
   margin: 0 auto;
 }
+
+@mixin laptop {
+	@media (max-width: 1440px) {
+		
+	}
+}
+
+@mixin tablet {
+	@media (max-width: 768px) {
+		
+	}
+}
+
+@mixin mobile {
+	@media (max-width: 482px) {
+		
+	}
+}
+
+@mixin custom($width) {
+  @media (max-width: $width) {
+    @content;
+  }
+}
