--- a/src/assets/styles/mixins.scss
+++ b/src/assets/styles/mixins.scss
@@ -4,25 +4,22 @@
 }
 
 @mixin laptop {
-	@media (max-width: 1440px) {
-		
-	}
+  @media (max-width: 1440px) {
+  }
 }
 
 @mixin tablet {
-	@media (max-width: 768px) {
-		
-	}
+  @media (max-width: 768px) {
+  }
 }
 
 @mixin mobile {
-	@media (max-width: 482px) {
-		
-	}
+  @media (max-width: 482px) {
+  }
 }
 
-@mixin custom($width) {
-  @media (max-width: $width) {
+@mixin custom($screen) {
+  @media (max-width: $screen+"px") {
     @content;
   }
 }
