--- a/src/components/pages/CardPage/styles.module.scss
+++ b/src/components/pages/CardPage/styles.module.scss
@@ -18,17 +18,17 @@
   }
   .content {
     display: flex;
-    @include custom(630px) {
+    @include custom(630) {
       display: block;
     }
     .image {
       max-width: 25rem;
       max-height: 25rem;
       margin: 0 6rem 0 0;
-      @include custom(630px) {
+      @include custom(630) {
         margin: 0 2rem 0 0;
       }
-      @include custom(630px) {
+      @include custom(630) {
         max-width: 30rem;
         height: 20rem;
         margin: 0 auto 1rem auto;
@@ -42,7 +42,7 @@
       display: flex;
       flex-direction: column;
       align-items: start;
-      @include custom(630px) {
+      @include custom(630) {
         align-items: center;
       }
       span {
@@ -68,13 +68,13 @@
       .nickname {
         color: $darkGrey;
         margin: 0 0 2rem 0;
-        @include custom(630px) {
+        @include custom(630) {
           margin: 0 0 0.5rem 0;
         }
       }
       .quote {
         max-width: 26rem;
-        @include custom(630px) {
+        @include custom(630) {
           margin: 0 auto;
           text-align: center;
           font-size: 0.9rem;
