--- a/src/components/molecules/CardGrid/styles.module.scss
+++ b/src/components/molecules/CardGrid/styles.module.scss
@@ -2,7 +2,7 @@
 .card {
   display: flex;
   align-items: center;
-  border-bottom: 0.0625rem solid #000;
+  border-bottom: 0.0625rem solid $black;
   padding:0 0 1rem 0;
 	margin: 0 0 1rem 0;
   @include custom(600) {
