--- a/src/components/pages/CardListPage/styles.module.scss
+++ b/src/components/pages/CardListPage/styles.module.scss
@@ -6,7 +6,7 @@
     max-width: 49rem;
     margin: 5rem auto;
     padding: 1rem;
-    box-shadow: 0px 0.25rem 0.5rem rgba(0, 0, 0, 0.1);
+    box-shadow: 0px 0.25rem 0.5rem $darkBg;
     border-radius: 0.25rem;
     background-color: $white;
     display: flex;
