--- a/src/components/pages/CardListPage/styles.module.scss
+++ b/src/components/pages/CardListPage/styles.module.scss
@@ -2,43 +2,6 @@
 .content {
   @include container;
   margin: 0 auto 1rem auto;
-  .search {
-    max-width: 49rem;
-    margin: 5rem auto;
-    padding: 1rem;
-    box-shadow: 0px 0.25rem 0.5rem $darkBg;
-    border-radius: 0.25rem;
-    background-color: $white;
-    display: flex;
-    align-items: center;
-    .input {
-      color: $darkGrey;
-      opacity: 0.5;
-      flex: 0 1 90%;
-    }
-    & span {
-      color: $darkGrey;
-    }
-    .text {
-      cursor: pointer;
-      display: flex;
-      align-items: center;
-      @include custom(540) {
-        font-size: 0.85rem;
-      }
-    }
-    @include custom(800) {
-      max-width: 30rem;
-      margin: 2.5rem auto;
-    }
-    @include custom(540) {
-      max-width: 20rem;
-      margin: 1rem auto;
-    }
-    @include custom(540) {
-      max-width: 17rem;
-    }
-  }
   .choiceBlock {
     display: flex;
     align-items: center;
@@ -46,5 +9,15 @@
     @include custom(1150) {
       display: block;
     }
+  }
+  .back {
+    cursor: pointer;
+    margin: 0 0 4rem 0;
+  }
+  .foundedContent {
+    @include container;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 1.5rem;
   }
 }
