no search results

--- a/src/components/pages/CardListPage/styles.module.scss
+++ b/src/components/pages/CardListPage/styles.module.scss
@@ -19,5 +19,9 @@
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     gap: 1.5rem;
+    .error {
+      font-size: 2rem;
+      color: $red;
+    }
   }
 }
