--- a/src/assets/styles/vars.scss
+++ b/src/assets/styles/vars.scss
@@ -4,5 +4,6 @@ $greenBg: rgba(48, 255, 30, 0.2);
 $darkGrey: #2d2d2d;
 $grey: #fbfbfb;
 $yellow: #ffd930;
-$black:#000;
-$darkBg:rgba(0, 0, 0, 0.1);
+$black: #000;
+$darkBg: rgba(0, 0, 0, 0.1);
+$red: rgb(206, 18, 18);
